--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 
         Hier sind die 3 Autos - such Dir eins aus!
     </div>
-    <!-- create a list with three links -->
 
-    <ul>
+    <div style="display: flex;">
+    
+
+    <ul style="padding-right: 40px; padding-top: 20px;"> 
         <li><a href="https://suchen.mobile.de/fahrzeuge/details.html?id=367470351&cn=DE&colors=BLUE&damageUnrepaired=NO_DAMAGE_UNREPAIRED&gn=44805%2C+Bochum-Nord%2C+Bochum%2C+Nordrhein-Westfalen&grossPrice=true&isSearchRequest=true&ll=51.5162564%2C7.2714747&makeModelVariant1.makeId=1900&makeModelVariant1.modelId=8&maxPrice=30000&pageNumber=1&rd=25&scopeId=C&sortOption.sortBy=relevance&transmissions=AUTOMATIC_GEAR&fnai=prev&searchId=9d00c20a-a2b3-a57f-0ac3-89d8312c0666&ref=srp">Blaues Auto</a></li>
         <li><a href="https://suchen.mobile.de/fahrzeuge/details.html?id=365314405&adLimitation=ONLY_DEALER_ADS&cn=DE&damageUnrepaired=NO_DAMAGE_UNREPAIRED&gn=44805%2C+Bochum&grossPrice=true&isSearchRequest=true&ll=51.5162564%2C7.2714747&makeModelVariant1.makeId=1900&makeModelVariant1.modelId=8&maxMileage=150000&maxPrice=25000&pageNumber=1&rd=15&scopeId=C&sortOption.sortBy=relevance&transmissions=AUTOMATIC_GEAR&searchId=4542bc92-1aa1-232e-4a4c-69d6acf3a9a7&ref=srp">Silbernes Auto</a></li>
         <li><a href="https://suchen.mobile.de/fahrzeuge/details.html?id=367466491&cn=DE&damageUnrepaired=NO_DAMAGE_UNREPAIRED&gn=44805%2C+Bochum-Nord%2C+Bochum%2C+Nordrhein-Westfalen&grossPrice=true&isSearchRequest=true&ll=51.5162564%2C7.2714747&makeModelVariant1.makeId=1900&makeModelVariant1.modelId=8&maxPrice=25000&pageNumber=1&rd=25&scopeId=C&sortOption.sortBy=relevance&transmissions=AUTOMATIC_GEAR&searchId=f1e1f535-5b06-7d96-9711-4adeeb17332c&ref=srp">Dunkel Graues Auto</a></li>
     </ul>
-    
+
+    <img src="photo1.jpeg" alt="Audi" width="300">
+</div>
 </body>
 </html>
